5-19-2010: Changed the default maximum time from 1000.0 sec to 20.0 sec, resolves #2361
12-15-2009: Provided 4 public getters and setters associated with the additional control panel swing and pswing components.
12-15-2009: Added a public getter for the close button so that client code can use its position for layout
10-27-2009: Made it so that aligned chart layout updates when zoom level changes for any chart.
10-27-2009: Fixed a bug that prevented listeners from being notified on zoom.
10-26-2009: Add back componentHierachyChanged to controlGraph.addControl
10-6-2009: Show exception if no time passed between data points
9-27-2009: Set chart to take up all vertical space by default, see #1782
9-22-2009: Made series clear specific to parent series, instead of clearing all series
9-21-2009: Update to Java 1.5
9-11-2009: Added ability to increase padding between series controls and slider, didn't change default behavior
9-11-2009: Added ability to center additional controls, only enabled for aligned layout, didn't change default behavior
9-4-2009: Added getter/setter for domain
9-4-2009: Update to Java 1.5
9-2-2009: Right-Justified chart close buttons (instead of centering, which caused them to go partly offscreen)
9-2-2009: Update to Java 1.5
Changed default window sizes to 4, based on Kathy's 8-26-2009 email